--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <!--HEADER-->
 
     <header class="page-header">
-        <div class="container page-header-container">
+        <div class="container page-header-container header-border">
             
         <nav class="page-navigation">
             <a class="logotype link" href="./index.html">
@@ -38,7 +38,7 @@
         </nav>
 
         <ul class="contacts-info list">
-            <li><a class="contacts link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li class="menu-item"><a class="contacts link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
             <li><a class="contacts link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
         </ul>
 
@@ -104,26 +104,34 @@
         <ul class="employees-list list">
             <li class="team-list">
                 <img src="./images/our-team/mark-guerrero.jpg" alt="mark-guerrero" width="264">
+                <div class="borders">
                 <h3 class="initials">Mark Guerrero</h3>
                 <p class="occupation">Product Designer</p>
+                </div>
             </li>
 
             <li class="team-list">
                 <img src="./images/our-team/tom-ford.jpg" alt="tom-ford" width="264">
+                <div class="borders">
                 <h3 class="initials">Tom Ford</h3>
                 <p class="occupation">Frontend Developer</p>
+                </div>
             </li>
 
             <li class="team-list">
                 <img src="./images/our-team/camila-garcia.jpg" alt="camila-garcia" width="264">
+                <div class="borders">
                 <h3 class="initials">Camila Garcia</h3>
                 <p class="occupation">Marketing</p>
+                </div>
             </li>
 
             <li class="team-list">
                 <img src="./images/our-team/daniel-wilson.jpg" alt="daniel-wilson" width="264">
+                <div class="borders">
                 <h3 class="initials">Daniel Wilson</h3>
                 <p class="occupation">UI Designer</p>
+                </div>
             </li>
         </ul>
         </div>
@@ -134,7 +142,7 @@
 
     <footer class="footer">
         <div class="container"> 
-        <a class="logotype link" href="./index.html">
+        <a class="f-logotype link" href="./index.html">
             <span class="web-footer">WEB</span>
             <span class="studio-footer">STUDIO</span>
         </a>
