--- a/portfolio.html
+++ b/portfolio.html
@@ -19,7 +19,7 @@
     <!--HEADER-->
 
     <header class="page-header">
-        <div class="container page-header-container header-border"> 
+        <div class="container page-header-container"> 
         <nav class="page-navigation">
             <a class="logotype link" href="./portfolio.html">
                 <span class="web">WEB</span>
@@ -160,7 +160,7 @@
 
     <footer class="footer">
         <div class="container"> 
-        <a class="logotype link" href="./portfolio.html">
+        <a class="f-logotype link" href="./portfolio.html">
             <span class="web-footer">WEB</span>
             <span class="studio-footer">STUDIO</span>
         </a>
