--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <!--HEADER-->
 
     <header class="page-header">
-        <div class="container page-header-container header-border">
+        <div class="container page-header-container">
             
         <nav class="page-navigation">
             <a class="logotype link" href="./index.html">
