--- a/portfolio.html
+++ b/portfolio.html
@@ -39,7 +39,7 @@
         </nav>
 
         <ul class="contacts-info list">
-            <li><a class="contacts link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li class="menu-item"><a class="contacts link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
             <li><a class="contacts link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
         </ul>
         </div>
@@ -57,7 +57,7 @@
             <li><button class="modal-btn" type="button">Web Site</button></li>
             <li><button class="modal-btn" type="button">App</button></li>
             <li><button class="modal-btn" type="button">Design</button></li>
-            <li><button class="modal-btn" type="button">Marketing</button></li>
+            <li><button class="modal-btn last-btn" type="button">Marketing</button></li>
         </ul>
         
 
